Added redemption payment.
Need present value calculation.

--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,10 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
+    "risk_free = 0.03     # Risk-free interest rate\n",
     "barrier = -0.25      # Maturity-monitored barrier\n",
     "coupon = 5.75 / 2    # Semi-annual coupon payment\n",
     "call_threshold = 0.1 # Call threshold\n",
@@ -62,7 +63,18 @@
     "pf = 0.0             # Participation Factor\n",
     "deferred_ppf = 0.05  # Deferred payment participation factor\n",
     "current_ppf = 0.01   # Current payment participation factor\n",
-    "vrt = 0.0            # Variable return threshold"
+    "vrt = 0.0            # Variable return threshold\n",
+    "\n",
+    "valuation_dates = pd.to_datetime(['2020-08-18', '2021-02-18',\n",
+    "                                  '2021-08-18', '2022-02-17',\n",
+    "                                  '2022-08-18', '2023-02-17',\n",
+    "                                  '2023-08-18', '2024-02-16',\n",
+    "                                  '2024-08-19', '2025-02-18',\n",
+    "                                  '2025-08-18', '2026-02-18',\n",
+    "                                  '2026-08-18', '2027-02-18'], \n",
+    "                                 infer_datetime_format=True)\n",
+    "\n",
+    "maturity_date = pd.to_datetime('2027-02-25', infer_datetime_format=True)"
    ]
   },
   {
@@ -74,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Returns:\n",
+      "Sample Returns:\n",
       "[[-0.09  -0.05  -0.05  -0.1  ]\n",
       " [-0.41  -0.03  -0.1   -0.14 ]\n",
       " [-0.12   0.06  -0.07  -0.04 ]\n",
@@ -116,12 +128,12 @@
     }
    ],
    "source": [
-    "returns = np.array([[ -9, -41, -12, -42,   -46, -48, -46.5, -50,   -47, -45.5, -47,   -43, -49,   -50],\n",
-    "                    [ -5,  -3,   6, -10,   -41, -46, -41,    -9,   -20, -49,   -45.5, -44, -41.5, -15],\n",
-    "                    [ -5, -10,  -7, -13.5, -46, -50, -47,   -46.5, -47, -42,   -44,   -14,  -4,    35],\n",
-    "                    [-10, -14,  -4, -13,   -11,  25,   1,    50,   -40, -60,    -5,     5,  95,     5]]).T/100.0\n",
+    "sample_returns = np.array([[ -9, -41, -12, -42,   -46, -48, -46.5, -50,   -47, -45.5, -47,   -43, -49,   -50],\n",
+    "                           [ -5,  -3,   6, -10,   -41, -46, -41,    -9,   -20, -49,   -45.5, -44, -41.5, -15],\n",
+    "                           [ -5, -10,  -7, -13.5, -46, -50, -47,   -46.5, -47, -42,   -44,   -14,  -4,    35],\n",
+    "                           [-10, -14,  -4, -13,   -11,  25,   1,    50,   -40, -60,    -5,     5,  95,     5]]).T/100.0\n",
     "\n",
-    "expected_payout = np.zeros_like(returns)\n",
+    "expected_payout = np.zeros_like(sample_returns)\n",
     "expected_payout[0, 0] = 2.875\n",
     "expected_payout[2, 0] = 6.40\n",
     "\n",
@@ -137,8 +149,12 @@
     "expected_payout[0:5, 3] = 2.875\n",
     "expected_payout[5, 3] = 3.125\n",
     "\n",
-    "print('Returns:')\n",
-    "print(returns)\n",
+    "expected_maturity_dates = np.array([maturity_date, maturity_date, \n",
+    "                                    valuation_dates[-1], valuation_dates[5]])\n",
+    "expected_redemption_values = np.array([50, 100, 100, 100])\n",
+    "\n",
+    "print('Sample Returns:')\n",
+    "print(sample_returns)\n",
     "print('\\nExpected Payout:')\n",
     "print(expected_payout)\n"
    ]
@@ -152,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +188,8 @@
     "        \n",
     "    Returns:\n",
     "        np.array:  [n_dates, n_simulations]  The resulting payouts.\n",
+    "        pd.TimeStamp:  Redemption Date\n",
+    "        float: Redmeption amount\n",
     "    \"\"\"\n",
     "    n_dates = returns.shape[0]\n",
     "    n_sims = returns.shape[1]\n",
@@ -188,7 +206,7 @@
     "    # Calculate deferred payment variable return if memory > 0\n",
     "    deferred = (face_value * (returns - barrier) * deferred_ppf) * (memory > 0)\n",
     "    \n",
-    "    # Calculate Payment Variable Return\n",
+    "    # Calculate the Current Payment Variable Return\n",
     "    variable = face_value * np.clip(returns - vrt, a_min=0.0, a_max=None) * current_ppf\n",
     "\n",
     "    # Calculate the total coupon payment\n",
@@ -201,12 +219,36 @@
     "    for i in range(n_sims):\n",
     "        coupons[hit_limit[i]:, i] = 0.0\n",
     "    \n",
-    "    return coupons\n",
+    "    # Add the maturity Redemption Payment\n",
+    "    hit_limit = hit_limit - 1\n",
+    "    limit1 = min(call_threshold, 0.0)\n",
+    "    maturity_dates = np.array([maturity_date for _ in range(n_sims)])\n",
+    "    redemption_payments = np.array([face_value for _ in range(n_sims)])\n",
+    "    for i in range(n_sims):\n",
+    "        if hit_limit[i] < n_dates:\n",
+    "            maturity_dates[i] = valuation_dates[hit_limit[i]]\n",
+    "            r = returns[hit_limit[i], i] \n",
+    "        else:\n",
+    "            r = returns[-1, i] \n",
     "\n",
-    "delta = np.abs(payout(returns) - expected_payout)\n",
-    "if np.max(delta) > 0:\n",
-    "    print(\"Error detected in test set.\")\n",
-    "    print(delta)\n",
+    "        if r > limit1:\n",
+    "            redemption_payments[i] *= 1 + vrt\n",
+    "        elif r < barrier:\n",
+    "            redemption_payments[i] *= 1 + r\n",
+    "\n",
+    "    return coupons, maturity_dates, redemption_payments\n",
+    "\n",
+    "# Run test\n",
+    "c, d, p = payout(sample_returns)\n",
+    "if np.max(np.abs(c - expected_payout)) > 0:\n",
+    "    print(\"Coupon error detected in test set.\")\n",
+    "    print(c - expected_payout)\n",
+    "elif np.max(np.abs(d - expected_maturity_dates)):\n",
+    "    print(\"Maturity date error detected in test set.\")\n",
+    "    print(d - expected_maturity_dates)\n",
+    "elif np.max(np.abs(p - expected_redemption_values)):\n",
+    "    print(\"Maturity value error detected in test set.\")\n",
+    "    print(p - expected_redemption_values)\n",
     "else:\n",
     "    print(\"Exact match with test set!!\")\n"
    ]
