Still working on present value calculation.

--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +65,46 @@
     "current_ppf = 0.01   # Current payment participation factor\n",
     "vrt = 0.0            # Variable return threshold\n",
     "\n",
-    "valuation_dates = pd.to_datetime(['2020-08-18', '2021-02-18',\n",
-    "                                  '2021-08-18', '2022-02-17',\n",
-    "                                  '2022-08-18', '2023-02-17',\n",
-    "                                  '2023-08-18', '2024-02-16',\n",
-    "                                  '2024-08-19', '2025-02-18',\n",
-    "                                  '2025-08-18', '2026-02-18',\n",
-    "                                  '2026-08-18', '2027-02-18'], \n",
-    "                                 infer_datetime_format=True)\n",
-    "\n",
-    "maturity_date = pd.to_datetime('2027-02-25', infer_datetime_format=True)"
+    "paydays = pd.to_datetime(['2020-08-18', '2021-02-18',\n",
+    "                          '2021-08-18', '2022-02-17',\n",
+    "                          '2022-08-18', '2023-02-17',\n",
+    "                          '2023-08-18', '2024-02-16',\n",
+    "                          '2024-08-19', '2025-02-18',\n",
+    "                          '2025-08-18', '2026-02-18',\n",
+    "                          '2026-08-18', '2027-02-18', '2027-02-25'], \n",
+    "                           infer_datetime_format=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate the discount factors for February 25 and March 3, 2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.98583402, 0.97115588, 0.95693029, 0.94275936, 0.928874  ,\n",
+       "       0.91511854, 0.90164028, 0.88836054, 0.87506234, 0.86210377,\n",
+       "       0.84947559, 0.83682769, 0.82456976, 0.81229269, 0.81182926])"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_feb = (paydays - pd.to_datetime('2020-02-25', infer_datetime_format=True)).days.values / 365.2425\n",
+    "t_mar = (paydays - pd.to_datetime('2020-03-3', infer_datetime_format=True)).days.values / 365.2425\n",
+    "z_feb = np.power(1 + 0.5*risk_free, -2*t_feb)\n",
+    "z_mar = np.power(1 + 0.5*risk_free, -2*t_mar)"
    ]
   },
   {
@@ -86,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -110,20 +140,21 @@
       " [-0.5   -0.15   0.35   0.05 ]]\n",
       "\n",
       "Expected Payout:\n",
-      "[[ 2.875  2.875  2.875  2.875]\n",
-      " [ 0.     2.875  2.875  2.875]\n",
-      " [ 6.4    2.935  2.875  2.875]\n",
-      " [ 0.     2.875  2.875  2.875]\n",
-      " [ 0.     0.     0.     2.875]\n",
-      " [ 0.     0.     0.     3.125]\n",
-      " [ 0.     0.     0.     0.   ]\n",
-      " [ 0.    12.3    0.     0.   ]\n",
-      " [ 0.     2.875  0.     0.   ]\n",
-      " [ 0.     0.     0.     0.   ]\n",
-      " [ 0.     0.     0.     0.   ]\n",
-      " [ 0.     0.    23.55   0.   ]\n",
-      " [ 0.     0.     2.875  0.   ]\n",
-      " [ 0.    14.875  3.225  0.   ]]\n"
+      "[[  2.875   2.875   2.875   2.875]\n",
+      " [  0.      2.875   2.875   2.875]\n",
+      " [  6.4     2.935   2.875   2.875]\n",
+      " [  0.      2.875   2.875   2.875]\n",
+      " [  0.      0.      0.      2.875]\n",
+      " [  0.      0.      0.    103.125]\n",
+      " [  0.      0.      0.      0.   ]\n",
+      " [  0.     12.3     0.      0.   ]\n",
+      " [  0.      2.875   0.      0.   ]\n",
+      " [  0.      0.      0.      0.   ]\n",
+      " [  0.      0.      0.      0.   ]\n",
+      " [  0.      0.     23.55    0.   ]\n",
+      " [  0.      0.      2.875   0.   ]\n",
+      " [  0.     14.875 103.225   0.   ]\n",
+      " [ 50.    100.      0.      0.   ]]\n"
      ]
     }
    ],
@@ -133,25 +164,23 @@
     "                           [ -5, -10,  -7, -13.5, -46, -50, -47,   -46.5, -47, -42,   -44,   -14,  -4,    35],\n",
     "                           [-10, -14,  -4, -13,   -11,  25,   1,    50,   -40, -60,    -5,     5,  95,     5]]).T/100.0\n",
     "\n",
-    "expected_payout = np.zeros_like(sample_returns)\n",
+    "expected_payout = np.zeros((sample_returns.shape[0] + 1, sample_returns.shape[1]))\n",
     "expected_payout[0, 0] = 2.875\n",
     "expected_payout[2, 0] = 6.40\n",
+    "expected_payout[-1, 0] = 50\n",
     "\n",
     "expected_payout[[0, 1, 3, 8], 1] = 2.875\n",
     "expected_payout[2, 1] = 2.935\n",
     "expected_payout[7, 1] = 12.3\n",
-    "expected_payout[-1, 1] = 14.875\n",
+    "expected_payout[-2, 1] = 14.875\n",
+    "expected_payout[-1, 1] = 100\n",
     "\n",
-    "expected_payout[[0, 1, 2, 3, -2], 2] = 2.875\n",
-    "expected_payout[-3, 2] = 23.55\n",
-    "expected_payout[-1, 2] = 3.225\n",
+    "expected_payout[[0, 1, 2, 3, -3], 2] = 2.875\n",
+    "expected_payout[-4, 2] = 23.55\n",
+    "expected_payout[-2, 2] = 3.225 + 100\n",
     "\n",
     "expected_payout[0:5, 3] = 2.875\n",
-    "expected_payout[5, 3] = 3.125\n",
-    "\n",
-    "expected_maturity_dates = np.array([maturity_date, maturity_date, \n",
-    "                                    valuation_dates[-1], valuation_dates[5]])\n",
-    "expected_redemption_values = np.array([50, 100, 100, 100])\n",
+    "expected_payout[5, 3] = 3.125 + 100\n",
     "\n",
     "print('Sample Returns:')\n",
     "print(sample_returns)\n",
@@ -168,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -180,11 +209,11 @@
     }
    ],
    "source": [
-    "from itertools import groupby\n",
-    "def payout(returns):\n",
+    "def payout(returns, evaluation_date):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        returns (np.array):  [n_dates, n_simulations] The ETF returns.\n",
+    "        evaluation_date (pd.TimeStamp):  Date to price the security.\n",
     "        \n",
     "    Returns:\n",
     "        np.array:  [n_dates, n_simulations]  The resulting payouts.\n",
@@ -211,44 +240,49 @@
     "\n",
     "    # Calculate the total coupon payment\n",
     "    coupons = hits * (coupon * (memory + 1) + deferred) + variable\n",
+    "    del deferred, variable\n",
     "    \n",
-    "    # Zero all coupons after the call limit has been achieved\n",
+    "    # Move all coupons upto call limit has been achieved to the payout array\n",
     "    # Dummy created so argmax returns the size of the array if limit not volated\n",
+    "    payout = np.zeros((n_dates + 1, n_sims))\n",
     "    dummy = np.vstack((returns, np.ones((1, n_sims)) * (call_threshold + 1)))\n",
     "    hit_limit = np.argmax(dummy > call_threshold, axis=0) + 1\n",
+    "    del dummy\n",
     "    for i in range(n_sims):\n",
-    "        coupons[hit_limit[i]:, i] = 0.0\n",
+    "        h = min(hit_limit[i], n_dates)\n",
+    "        payout[:h, i] = coupons[:h, i]\n",
+    "    del coupons\n",
     "    \n",
     "    # Add the maturity Redemption Payment\n",
-    "    hit_limit = hit_limit - 1\n",
     "    limit1 = min(call_threshold, 0.0)\n",
-    "    maturity_dates = np.array([maturity_date for _ in range(n_sims)])\n",
-    "    redemption_payments = np.array([face_value for _ in range(n_sims)])\n",
+    "    hit_limit -= 1\n",
     "    for i in range(n_sims):\n",
     "        if hit_limit[i] < n_dates:\n",
-    "            maturity_dates[i] = valuation_dates[hit_limit[i]]\n",
+    "            maturity_date_index = hit_limit[i]\n",
     "            r = returns[hit_limit[i], i] \n",
     "        else:\n",
+    "            maturity_date_index = n_dates\n",
     "            r = returns[-1, i] \n",
     "\n",
     "        if r > limit1:\n",
-    "            redemption_payments[i] *= 1 + vrt\n",
-    "        elif r < barrier:\n",
-    "            redemption_payments[i] *= 1 + r\n",
-    "\n",
-    "    return coupons, maturity_dates, redemption_payments\n",
+    "            payout[maturity_date_index, i] = payout[maturity_date_index, i] + face_value * (1 + vrt)\n",
+    "        elif r >= barrier:\n",
+    "            payout[maturity_date_index, i] = payout[maturity_date_index, i] + face_value\n",
+    "        else:\n",
+    "            payout[maturity_date_index, i] = payout[maturity_date_index, i] + face_value * (1 + r)\n",
+    "    \n",
+    "    # Calculate present value of each simulation\n",
+    "    t = (paydays - evaluation_date).days / 365.2425\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return payout\n",
     "\n",
     "# Run test\n",
-    "c, d, p = payout(sample_returns)\n",
+    "c = payout(sample_returns, issue_date)\n",
     "if np.max(np.abs(c - expected_payout)) > 0:\n",
     "    print(\"Coupon error detected in test set.\")\n",
     "    print(c - expected_payout)\n",
-    "elif np.max(np.abs(d - expected_maturity_dates)):\n",
-    "    print(\"Maturity date error detected in test set.\")\n",
-    "    print(d - expected_maturity_dates)\n",
-    "elif np.max(np.abs(p - expected_redemption_values)):\n",
-    "    print(\"Maturity value error detected in test set.\")\n",
-    "    print(p - expected_redemption_values)\n",
     "else:\n",
     "    print(\"Exact match with test set!!\")\n"
    ]
