PV done but assuming constant risk-free rate.

--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "risk_free = 0.03     # Risk-free interest rate\n",
     "barrier = -0.25      # Maturity-monitored barrier\n",
     "coupon = 5.75 / 2    # Semi-annual coupon payment\n",
     "call_threshold = 0.1 # Call threshold\n",
@@ -79,32 +78,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Calculate the discount factors for February 25 and March 3, 2020"
+    "#### Calculate the discount factors for February 25 and March 3, 2020\n",
+    "\n",
+    "**_TODO:_**  This assumes a constant risk-free rate based on the 1-Year Canadian Tressury Bill yeild of 1.04%.  We need to extract the full yield curve for February 25 and March 3, 2020."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.98583402, 0.97115588, 0.95693029, 0.94275936, 0.928874  ,\n",
-       "       0.91511854, 0.90164028, 0.88836054, 0.87506234, 0.86210377,\n",
-       "       0.84947559, 0.83682769, 0.82456976, 0.81229269, 0.81182926])"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t_feb = (paydays - pd.to_datetime('2020-02-25', infer_datetime_format=True)).days.values / 365.2425\n",
     "t_mar = (paydays - pd.to_datetime('2020-03-3', infer_datetime_format=True)).days.values / 365.2425\n",
-    "z_feb = np.power(1 + 0.5*risk_free, -2*t_feb)\n",
-    "z_mar = np.power(1 + 0.5*risk_free, -2*t_mar)"
+    "\n",
+    "risk_free = 0.0104\n",
+    "z_feb = np.power(1 + 0.5*risk_free, -2*t_feb).reshape((1, -1))\n",
+    "z_mar = np.power(1 + 0.5*risk_free, -2*t_mar).reshape((1, -1))"
    ]
   },
   {
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -197,34 +187,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exact match with test set!!\n"
+      "Exact match with test set!!\n",
+      "\n",
+      "Risk-free of 6.610% gives 0.152% max delta\n",
+      "[[-7.04794695  5.09188846  4.90587271  5.53356034]]\n"
      ]
     }
    ],
    "source": [
-    "def payout(returns, evaluation_date):\n",
+    "def payout(returns, z):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        returns (np.array):  [n_dates, n_simulations] The ETF returns.\n",
-    "        evaluation_date (pd.TimeStamp):  Date to price the security.\n",
+    "        z (np.array):  [1, n_dates + 1] Discount factors to be applied to the payout.\n",
     "        \n",
     "    Returns:\n",
-    "        np.array:  [n_dates, n_simulations]  The resulting payouts.\n",
-    "        pd.TimeStamp:  Redemption Date\n",
-    "        float: Redmeption amount\n",
+    "        np.array:  [n_dates + 1, n_simulations]  Payouts for valuation dates and maturity.\n",
+    "        np.array:  [n_simulations]  The present value of the payouts\n",
     "    \"\"\"\n",
     "    n_dates = returns.shape[0]\n",
     "    n_sims = returns.shape[1]\n",
     "\n",
     "    # Determine the returns that are above the barrier (hits)\n",
-    "    hits = returns >= b\n",
+    "    hits = returns >= barrier\n",
     "    miss = np.logical_not(hits)\n",
     "    \n",
     "    # Calculate the memory\n",
@@ -272,19 +264,20 @@
     "            payout[maturity_date_index, i] = payout[maturity_date_index, i] + face_value * (1 + r)\n",
     "    \n",
     "    # Calculate present value of each simulation\n",
-    "    t = (paydays - evaluation_date).days / 365.2425\n",
+    "    pv = z.dot(payout)\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    return payout\n",
+    "    return payout, pv\n",
     "\n",
     "# Run test\n",
-    "c = payout(sample_returns, issue_date)\n",
-    "if np.max(np.abs(c - expected_payout)) > 0:\n",
+    "p, pv_feb = payout(sample_returns, z_feb)\n",
+    "if np.max(np.abs(p - expected_payout)) > 0:\n",
     "    print(\"Coupon error detected in test set.\")\n",
     "    print(c - expected_payout)\n",
     "else:\n",
-    "    print(\"Exact match with test set!!\")\n"
+    "    print(\"Exact match with test set!!\")\n",
+    "\n",
+    "print(\"\\nRisk-free of {:.3f}% gives {:.3f}% max delta\".format(rf*100, r_delta))\n",
+    "print(r)\n"
    ]
   },
   {
@@ -297,9 +290,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "mmbp",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "mmbp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -311,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
