--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,8 +196,7 @@
      "text": [
       "Exact match with test set!!\n",
       "\n",
-      "Risk-free of 6.610% gives 0.152% max delta\n",
-      "[[-7.04794695  5.09188846  4.90587271  5.53356034]]\n"
+      "PV = [$55.66, $132.79, $132.19, $114.14]\n"
      ]
     }
    ],
@@ -266,7 +265,7 @@
     "    # Calculate present value of each simulation\n",
     "    pv = z.dot(payout)\n",
     "    \n",
-    "    return payout, pv\n",
+    "    return payout, pv[0, :]\n",
     "\n",
     "# Run test\n",
     "p, pv_feb = payout(sample_returns, z_feb)\n",
@@ -274,10 +273,9 @@
     "    print(\"Coupon error detected in test set.\")\n",
     "    print(c - expected_payout)\n",
     "else:\n",
-    "    print(\"Exact match with test set!!\")\n",
+    "    print(\"Exact match with test set!!\\n\")\n",
     "\n",
-    "print(\"\\nRisk-free of {:.3f}% gives {:.3f}% max delta\".format(rf*100, r_delta))\n",
-    "print(r)\n"
+    "print(\"PV = [{}]\".format(\", \".join([\"${:.2f}\".format(v) for v in pv_feb])))\n"
    ]
   },
   {
