Completed calculation of discount factors.
Next is the volatility.

--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -80,21 +80,20 @@
    "source": [
     "#### Calculate the discount factors for February 25 and March 3, 2020\n",
     "\n",
-    "**_TODO:_**  This assumes a constant risk-free rate based on the 1-Year Canadian Tressury Bill yeild of 1.04%.  We need to extract the full yield curve for February 25 and March 3, 2020."
+    "These discount factors are for each of the 14 valuation dates plus the final maturity date relative to both February 25, 2020 and March 3, 2020.  The discount factors were calculated in the Excel file linked [here](fnen6800-pricing.xlsm).  These were based on Canadian bond price data from [MarketWatch](https://www.marketwatch.com/investing/bond) except for the 1-month T-Bill, whcih came from [YCharts](https://ycharts.com/indicators/canada_1_month_treasury_bill_yield)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_feb = (paydays - pd.to_datetime('2020-02-25', infer_datetime_format=True)).days.values / 365.2425\n",
-    "t_mar = (paydays - pd.to_datetime('2020-03-3', infer_datetime_format=True)).days.values / 365.2425\n",
+    "z_feb = np.array([[0.992410841, 0.985339460, 0.979546758, 0.973836715, 0.968077416, 0.962380888, 0.956621589, \n",
+    "                   0.951538723, 0.946359581, 0.941292119, 0.936256007, 0.930587457, 0.924659311, 0.918391061, 0.918150635]])\n",
     "\n",
-    "risk_free = 0.0104\n",
-    "z_feb = np.power(1 + 0.5*risk_free, -2*t_feb).reshape((1, -1))\n",
-    "z_mar = np.power(1 + 0.5*risk_free, -2*t_mar).reshape((1, -1))"
+    "z_mar = np.array([[0.994351969, 0.988777333, 0.984887707, 0.981114970, 0.976878483, 0.972688169, 0.968451682, \n",
+    "                   0.964645576, 0.960760469, 0.956959137, 0.952684688, 0.948130959, 0.942959266, 0.936977959, 0.936748540]])"
    ]
   },
   {
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +195,7 @@
      "text": [
       "Exact match with test set!!\n",
       "\n",
-      "PV = [$55.66, $132.79, $132.19, $114.14]\n"
+      "PV = [$55.03, $131.26, $130.68, $113.33]\n"
      ]
     }
    ],
@@ -271,11 +270,18 @@
     "p, pv_feb = payout(sample_returns, z_feb)\n",
     "if np.max(np.abs(p - expected_payout)) > 0:\n",
     "    print(\"Coupon error detected in test set.\")\n",
-    "    print(c - expected_payout)\n",
+    "    print(p - expected_payout)\n",
     "else:\n",
     "    print(\"Exact match with test set!!\\n\")\n",
     "\n",
     "print(\"PV = [{}]\".format(\", \".join([\"${:.2f}\".format(v) for v in pv_feb])))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Estimate ETF Volatility"
    ]
   },
   {
