--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Implied volatility"
+    "### 2.2 Implied volatility\n",
+    "The implied volatility was calculated in the Excel file linked [here](fnen6800-pricing.xlsm) using data from [TMX](https://m-x.ca/nego_cotes_en.php?symbol=XSP*).\n",
+    "\n",
+    "The implied volatilites were 11.5% and 13.4%, which is very close to the historical values of 12.9% (+1.4%) and 13.1% (-0.3%).  When we price the security, we will try both sets of volatilities to investigate the sensitivity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Monte Carlo Pricing\n",
+    "Using the volatilities above we can now simulate the ETF to generate possible returns, then possible security payouts and then the average present value, which is the fair price."
    ]
   },
   {
