Last updates before submission.

--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -1151,19 +1151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expected Present Value = $97.46 ($7.81-$135.36), with a $0.028 standard error.\n",
-      "Feb price is $97.457 with q = 1.587%.\n"
+      "Expected Present Value = $97.47 ($8.84-$135.27), with a $0.028 standard error.\n",
+      "Feb price is $97.469 with q = 1.587%.\n",
+      "Wall time: 11.7 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# 1.590 = $97.45 +- $0.028\n",
     "# 1.587 = $97.457 +- $0.028\n",
     "# 1.580 = $97.47 +- $0.028\n",
